Fixed file issues, correct directories work now.

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -8,9 +8,6 @@
     <title>Reservation Page</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
@@ -40,7 +37,8 @@
                                     <option>4</option>
                                     <option>5 (Strongly Agree)</option>
                                 </select>
-                                <label for="q-2">Generally speaking, you rely more on your experience than your imagination.</label>
+                                <label for="q-2">Generally speaking, you rely more on your experience than your
+                                    imagination.</label>
                                 <select class="form-control" id="q-2">
                                     <option>1 (Strongly Disagree)</option>
                                     <option>2</option>
@@ -48,7 +46,8 @@
                                     <option>4</option>
                                     <option>5 (Strongly Agree)</option>
                                 </select>
-                                <label for="q-3">You find it easy to stay relaxed and focused even when there is some pressure.</label>
+                                <label for="q-3">You find it easy to stay relaxed and focused even when there is some
+                                    pressure.</label>
                                 <select class="form-control" id="q-3">
                                     <option>1 (Strongly Disagree)</option>
                                     <option>2</option>
@@ -72,7 +71,8 @@
                                     <option>4</option>
                                     <option>5 (Strongly Agree)</option>
                                 </select>
-                                <label for="q-6">It is often difficult for you to relate to other people’s feelings.</label>
+                                <label for="q-6">It is often difficult for you to relate to other people’s
+                                    feelings.</label>
                                 <select class="form-control" id="q-6">
                                     <option>1 (Strongly Disagree)</option>
                                     <option>2</option>
@@ -80,7 +80,8 @@
                                     <option>4</option>
                                     <option>5 (Strongly Agree)</option>
                                 </select>
-                                <label for="q-7">In a discussion, truth should be more important than people’s sensitivities.</label>
+                                <label for="q-7">In a discussion, truth should be more important than people’s
+                                    sensitivities.</label>
                                 <select class="form-control" id="q-7">
                                     <option>1 (Strongly Disagree)</option>
                                     <option>2</option>
@@ -96,7 +97,8 @@
                                     <option>4</option>
                                     <option>5 (Strongly Agree)</option>
                                 </select>
-                                <label for="q-9">You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</label>
+                                <label for="q-9">You think that everyone’s views should be respected regardless of
+                                    whether they are supported by facts or not.</label>
                                 <select class="form-control" id="q-9">
                                     <option>1 (Strongly Disagree)</option>
                                     <option>2</option>
@@ -104,7 +106,8 @@
                                     <option>4</option>
                                     <option>5 (Strongly Agree)</option>
                                 </select>
-                                <label for="q-10">You feel more energetic after spending time with a group of people.</label>
+                                <label for="q-10">You feel more energetic after spending time with a group of
+                                    people.</label>
                                 <select class="form-control" id="q-10">
                                     <option>1 (Strongly Disagree)</option>
                                     <option>2</option>
@@ -123,7 +126,10 @@
             <div class="col-md-2"></div>
         </div>
 
-        <script src="../../server.js"></script>
+
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="../routing/htmlRoutes.js"></script>
     </container>
 </body>
 
