--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,7 +21,7 @@
                     <h1 class="d-flex justify-content-center">Answer a few basic questions.</h1>
                     <h3 class="d-flex justify-content-center">Then find the friend with the greatest compatibility!</h3>
                     <div class="button-layout btn-lg d-flex justify-content-center mt-3">
-                        <button class="btn btn-outline-primary mr-3 view-survey" role="button">Take Survey</a>
+                        <a href="/survey" class="btn btn-outline-primary mr-3 view-survey">Take Survey</a>
                     </div>
                 </div>
                 <a href="/api/friends" id="apiList">API Friends List</a> |
@@ -33,7 +33,8 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="../routing/htmlRoutes.js"></script>
+    <script src="../../logic.js"></script>
+
 </body>
 
 </html>
