--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -125,12 +125,11 @@
             </div>
             <div class="col-md-2"></div>
         </div>
-
-
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="../routing/htmlRoutes.js"></script>
     </container>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+            <script src="../../logic.js"></script>
 </body>
 
 </html>
