--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -31,89 +31,89 @@
                             <div class="form-group inputChoices">
                                 <label for="q-1">Your mind is always buzzing with unexplored ideas and plans.</label>
                                 <select class="form-control" id="q-1">
-                                    <option>1 (Strongly Disagree)</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5 (Strongly Agree)</option>
+                                    <option value="1">1 (Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5 (Strongly Agree)</option>
                                 </select>
                                 <label for="q-2">Generally speaking, you rely more on your experience than your
                                     imagination.</label>
                                 <select class="form-control" id="q-2">
-                                    <option>1 (Strongly Disagree)</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5 (Strongly Agree)</option>
+                                    <option value="1">1 (Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5 (Strongly Agree)</option>
                                 </select>
                                 <label for="q-3">You find it easy to stay relaxed and focused even when there is some
                                     pressure.</label>
                                 <select class="form-control" id="q-3">
-                                    <option>1 (Strongly Disagree)</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5 (Strongly Agree)</option>
+                                    <option value="1">1 (Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5 (Strongly Agree)</option>
                                 </select>
                                 <label for="q-4">You rarely do something just out of sheer curiosity.</label>
                                 <select class="form-control" id="q-4">
-                                    <option>1 (Strongly Disagree)</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5 (Strongly Agree)</option>
+                                    <option value="1">1 (Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5 (Strongly Agree)</option>
                                 </select>
                                 <label for="q-5">People can rarely upset you.</label>
                                 <select class="form-control" id="q-5">
-                                    <option>1 (Strongly Disagree)</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5 (Strongly Agree)</option>
+                                    <option value="1">1 (Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5 (Strongly Agree)</option>
                                 </select>
                                 <label for="q-6">It is often difficult for you to relate to other people’s
                                     feelings.</label>
                                 <select class="form-control" id="q-6">
-                                    <option>1 (Strongly Disagree)</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5 (Strongly Agree)</option>
+                                    <option value="1">1 (Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5 (Strongly Agree)</option>
                                 </select>
                                 <label for="q-7">In a discussion, truth should be more important than people’s
                                     sensitivities.</label>
                                 <select class="form-control" id="q-7">
-                                    <option>1 (Strongly Disagree)</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5 (Strongly Agree)</option>
+                                    <option value="1">1 (Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5 (Strongly Agree)</option>
                                 </select>
                                 <label for="q-8">You rarely get carried away by fantasies and ideas.</label>
                                 <select class="form-control" id="q-8">
-                                    <option>1 (Strongly Disagree)</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5 (Strongly Agree)</option>
+                                    <option value="1">1 (Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5 (Strongly Agree)</option>
                                 </select>
                                 <label for="q-9">You think that everyone’s views should be respected regardless of
                                     whether they are supported by facts or not.</label>
                                 <select class="form-control" id="q-9">
-                                    <option>1 (Strongly Disagree)</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5 (Strongly Agree)</option>
+                                    <option value="1">1 (Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5 (Strongly Agree)</option>
                                 </select>
                                 <label for="q-10">You feel more energetic after spending time with a group of
                                     people.</label>
                                 <select class="form-control" id="q-10">
-                                    <option>1 (Strongly Disagree)</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5 (Strongly Agree)</option>
+                                    <option value="1">1 (Strongly Disagree)</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5 (Strongly Agree)</option>
                                 </select>
                             </div>
                             <button type="submit" class="btn btn-primary btn-lg submission">Submit</button>
